--- a/src/Main.css
+++ b/src/Main.css
@@ -3,11 +3,9 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f5f5f5;
-  }
-  
-  .container {
-    max-width: 700px;
-    margin: 20px auto;
-    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
   }
   
