--- a/src/components/todoApp/todoContainer.css
+++ b/src/components/todoApp/todoContainer.css
@@ -1,23 +1,22 @@
 .todo-container {
-  padding: 20px;
-  text-align: center;
+  text-align: center; 
+  margin: 20px auto; 
 }
 
 .todo-container h1 {
   font-size: 80px;
-  margin-bottom: 20px;
   color: #b83f45;
-  font-weight: 300;
+  margin-bottom: 10px;
 }
 
 .todo-container p {
-  font-size: 15px;
+  font-size: 16px;
   color: #666;
   margin-bottom: 20px;
 }
 
-.todo-container .footer {
-  margin-top: 30px;
-  font-size: 13px;
+.footer {
+  font-size: 14px;
   color: #999;
+  margin-top: 20px;
 }
